Made the wrap a fixed width to keep everything contained... again...

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,11 @@ body {
     margin: 0;
 }
 
+#wrap {
+    width: 950px;
+    margin: auto;
+}
+
 #header {
     display: block;
     height: 100px;
